see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Jan-2012 Jean-Marie Simonet
 $ Updating installation ini files az-AZ, bg-BG, ckb-IQ, da-DK, de-DE, es-ES, et-EE, fi-FI, hu-HU, it-IT, ja-JP, km-KH, mk-MK, nl-NL, sr-SR, sr-YU, sv-SE, ta-IN
 # [#27565] Move Smart Search content type-specific language strings into their respective plug-ins. Thanks Chris.
 # [#25086] "Image" button in tinyMCE is missing when creating new content. Thanks Elin.
 $ Updating installation ini files he-IL, mn-MN, uk-UA

10-Jan-2012 Mark Dexter
 # [#27634] PHP Strict error for SQLServer (merge with 11.4 platform)
 # [#27678] PHP 5.4 (E_STRICT): installation fails due to strict warnings
 # [#27604] class suffix missing from mod_banner ITEMS
 # [#27479] Finder schema to support SQLServer
 # [#27607] Sample Data for SQLServer and SQLAzure
 # [#27635] JForm issue with Fabrik - proposed solution (thanks Rouven & Christophe)
 # [#27630] Issue with replacePrefix -- valid only for SQLServer 
 + [#27507] Add ablility to turn off the email to user when an Admin creates a user
 # [#24602] Users with create rights in a category but not component can't create subcategories**
 # [#27650] sample sites - category not found
 # [#27673] Sort in Users management - backend
 # [#27587] Update Generator Tag
 # [#27672] Toggle registered users in user manager
 + [#26635] (patch) Enhancement to update listing to show infourl items
 # [#27686] Backport some fixes from the platform
 # [#27574] Error in opening Joomla 2.5 website if no database available
 # [#27681] Database check feature improvements
 # [#27656] Backward compatibility issue with JRules() and JRule()