@@ -4,10 +4,10 @@
 	<author>Joomla!</author>
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
-	<copyright>(C) 2005 - 2011 Open Source Matters. All rights reserved</copyright>
+	<copyright>(C) 2005 - 2012 Open Source Matters. All rights reserved</copyright>
 	<license>GNU General Public License version 2 or later; see     LICENSE.txt</license>
 	<version>2.5.0</version>
-	<creationDate>December 2011</creationDate>
+	<creationDate>January 2012</creationDate>
 	<description>FILES_JOOMLA_XML_DESCRIPTION</description>
 
 	<scriptfile>administrator/components/com_admin/script.php</scriptfile>
